[package]
name = "funqy"
version = "0.1.0"
authors = ["Ryan Vandersmith (https://github.com/rvanasa)"]

[dependencies]
rand = "^0.4.2"
regex = "1.0"
reqwest = "0.8"
num = "^0.1"
# ndarray = "0.11"
# ndarray-linalg = { version = "0.9", features = ["openblas"] }
# nalgebra = "0.16"
lapacke = "0.2.0"
openblas-src = { version = "0.6.0", features = ["static"] }
nom = "3.2.1"
clap = "^2.31"
rustyline = "1.0"
notify = "^4.0"
