[package]
name = "funqy"
version = "0.1.0"
authors = ["Ryan Vandersmith (https://github.com/rvanasa)"]

[dependencies]
rand = "^0.4"
regex = "^1.3"
reqwest = "^0.8"
num = "^0.2"
lapacke = "^0.2"
lapack-src = { version = "^0.4", features = ["intel-mkl"] }
nom = "3.2.1"
clap = "^2.31"
rustyline = "^1.0"
notify = "^4.0"
